Updated CSS to fix some overflow

--- a/src/styles/main.css
+++ b/src/styles/main.css
@@ -4,16 +4,8 @@ html {
   font-family: Helvetica, Arial, sans-serif;
 }
 
-body {
-  height: 100vh;
-  width: 100vw;
-}
-
 #root {
   height: 100vh;
-  width: 100vw;
-  display: grid;
-  place-content: center;
 }
 
 #app {
@@ -28,10 +20,10 @@ body {
   display: flex;
   flex-direction: column;
   width: 100%;
-  height: 12%;
-  margin-bottom: 2%;
-  padding-bottom: 0.5%;
-  font-size: 4rem;
+  margin-bottom: 30px;
+  padding-bottom: 1vw;
+  padding-top: 5px;
+  font-size: 200px;
   align-items: center;
   text-align: center;
   place-content: center;
@@ -43,7 +35,10 @@ body {
 
 #gameContainer {
   display: grid;
+  place-content: center;
   grid-template-columns: 1fr 2fr 1fr;
+  width: 100vw;
+  height: 100vh;
 }
 
 #titleText {
@@ -66,10 +61,13 @@ body {
 }
 
 #cardContainer {
-  grid-column: 2;
-  display: flex;
+  grid-column: 1/3;
+  display: grid;
+  grid-template-columns: 1fr 1fr 1fr 1fr;
+  grid-template-rows: 1fr 1fr 1fr;
   flex-direction: row;
   flex-wrap: wrap;
+  place-items: center;
   place-content: space-between;
   text-align: center;
   color: white;
@@ -79,22 +77,34 @@ body {
 
 .card {
   display: flex;
+  align-items: center;
   flex-direction: column;
   place-content: space-between;
+  max-width: 100%;
+  max-height: 100%;
+  white-space: nowrap;
 }
 
 .cardImage {
   border: solid 1px black;
   pointer-events: none;
-  width: 200px;
-  height: 200px;
+  width: 10vw;
+  height: 10vw;
   border-radius: 100%;
+
   -webkit-box-shadow: 0px 0px 38px -9px rgba(0, 0, 0, 1);
   -moz-box-shadow: 0px 0px 38px -9px rgba(0, 0, 0, 1);
   box-shadow: 0px 0px 38px -9px rgba(0, 0, 0, 1);
 }
 
 .growCard {
+  display: flex;
+  align-items: center;
+  flex-direction: column;
+  place-content: space-between;
+  max-width: 100%;
+  max-height: 100%;
+  white-space: nowrap;
   transition: all 0.2s ease-in-out;
 }
 
@@ -103,8 +113,8 @@ body {
 }
 
 .cardText {
-  margin-top: 5%;
-  margin-bottom: 5%;
+  margin-top: 10px;
+  margin-bottom: 10px;
   font-size: 1.5rem;
   pointer-events: none;
   text-shadow: 0px 0px 11px rgba(62, 255, 246, 1);
@@ -113,9 +123,10 @@ body {
 #scoreCounterContainer {
   display: flex;
   flex-direction: column;
-  font-size: 4rem;
+  font-size: 3vw;
   place-content: center;
   align-items: center;
   color: white;
   text-shadow: 0px 2px #1b60a4;
+  /* white-space: pre; */
 }
